// ==============================================================================
// PROGANADO SaaS - MODELO RELACIONAL (DBML v2) - 12 TABLAS EN 3FN
// Paridad 100% con schema_produccion_proganado_v3.sql
// ==============================================================================

Table usuarios {
  id_usuario varchar [pk]
  nombre varchar [not null]
  email varchar [unique, not null]
  contrasena_hash varchar [not null]
  rol varchar [not null, note: 'Administrador, Asistente, Veterinario, Operario']
  fecha_registro datetime [default: `now()`]
}

Table fincas {
  id_finca varchar [pk]
  id_usuario varchar [not null, ref: > usuarios.id_usuario]
  nombre_finca varchar [not null]
  documento_titular varchar [not null]
  codigo_ica_predio varchar [unique, not null]
  municipio varchar [not null, default: 'Santa Rosa de Osos']
}

Table suscripciones_saas {
  id_suscripcion varchar [pk]
  id_finca varchar [not null, ref: > fincas.id_finca]
  plan_tipo varchar [not null, note: 'Free, Pro_119k, Multi_Predio_299k']
  estado_acceso varchar [not null, note: 'Activo, Solo_Lectura, Suspendido']
  limite_vacas integer [not null, default: 15]
  fecha_inicio date [not null]
  fecha_vencimiento date
}

Table entregas_acopio {
  id_entrega varchar [pk]
  id_finca varchar [not null, ref: > fincas.id_finca]
  fecha_entrega date [not null]
  litros_totales decimal(7,2) [not null]
  valor_bruto_est decimal(10,2) [not null]
  recuento_ufc integer
  numero_tiquete varchar [note: 'Tiquete físico carrotanque Colanta']
  litros_facturados decimal(7,2) [note: 'Litros medidos por flujómetro del camión']
  precio_litro_real decimal(8,2) [note: 'Precio liquidado por litro COP']
  valor_pagado_real decimal(10,2) [note: 'Consignación neta recibida Colanta']
  diferencia_litros decimal(7,2) [note: 'Columna calculada: merma o retención']
}

Table potreros {
  id_potrero varchar [pk]
  id_finca varchar [not null, ref: > fincas.id_finca]
  nombre_potrero varchar [not null]
  dias_ocupacion integer [not null, default: 1]
  dias_descanso_prv integer [not null, default: 35]
}

Table razas {
  id_raza varchar [pk]
  nombre_raza varchar [unique, not null]
  descripcion_proposito text [not null]
}

Table bovinos {
  id_bovino varchar [pk]
  id_finca varchar [not null, ref: > fincas.id_finca]
  id_potrero varchar [ref: > potreros.id_potrero]
  id_raza varchar [not null, ref: > razas.id_raza]
  sexo varchar [not null, note: 'Hembra, Macho']
  estado_fisiologico varchar [not null, note: 'En_Ordeño, Horra_Seca, Novilla_Vientre, Ternero_Crecimiento, Toro_Reproductor']
  estado_vital varchar [not null, default: 'Activo', note: 'Activo, Muerto, Vendido, Descarte']
  fecha_nacimiento date [not null]
}

Table marcaciones {
  id_marcacion varchar [pk]
  id_bovino varchar [not null, ref: > bovinos.id_bovino]
  tipo_marca varchar [not null, note: 'Arete_ICA, Arete_SINIGAN, Chapeta_Manejo, Hierro_Caliente, Tatuaje, Chip_RFID']
  codigo_valor varchar [not null]
  estado_activo boolean [not null, default: true]

  Note: 'Regla ICA: uq_marcaciones_codigo_activo (código único en hato) y uq_marcaciones_bovino_tipo_activo (1 activo por tipo por animal)'
}

Table medicamentos {
  id_medicamento varchar [pk]
  nombre_farmaco varchar [unique, not null]
  dias_retiro_ica integer [not null]
}

Table tratamientos_sanitarios {
  id_tratamiento varchar [pk]
  id_bovino varchar [not null, ref: > bovinos.id_bovino]
  id_medicamento varchar [ref: > medicamentos.id_medicamento]
  tipo_procedimiento varchar [not null]
  fecha_tratamiento date [not null]
  dosis_ml decimal(5,2)
}

Table pesajes_leche {
  id_pesaje varchar [pk]
  id_bovino varchar [not null, ref: > bovinos.id_bovino]
  fecha_pesaje date [not null]
  hora_pesaje time [not null]
  litros_obtenidos decimal(5,2) [not null]
}

Table eventos_reproductivos {
  id_evento varchar [pk]
  id_bovino varchar [not null, ref: > bovinos.id_bovino]
  tipo_evento varchar [not null, note: 'Parto, Celo_Observable, Inseminacion, Palpacion, Aborto']
  fecha_evento date [not null]
  dias_abiertos_calc integer
}
